deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: javazone
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    haproxy-ingress.github.io/rewrite-target: /
  labels:
    app: javazone
spec:
  ingressClassName: authenticated
  rules:
    - host: ibidem.no
      http:
        paths:
          - path: /javazone
            pathType: Prefix
            backend:
              service:
                name: javazone
                port:
                  name: http
  tls:
    - hosts:
        - ibidem.no
      secretName: ibidem-ingress-cert
